--- a/_modules/thetis/rungekutta.html
+++ b/_modules/thetis/rungekutta.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>thetis.rungekutta &#8212; Thetis 0+untagged.833.g086f878 documentation</title>
+    <title>thetis.rungekutta &#8212; Thetis 0+untagged.863.gb20c529 documentation</title>
     
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0+untagged.833.g086f878',
+        VERSION:     '0+untagged.863.gb20c529',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -488,6 +488,14 @@
     <span class="n">b</span> <span class="o">=</span> <span class="p">[</span><span class="mf">0.0</span><span class="p">,</span> <span class="mf">1.0</span><span class="p">]</span>
     <span class="n">c</span> <span class="o">=</span> <span class="p">[</span><span class="mf">0.0</span><span class="p">,</span> <span class="mf">0.5</span><span class="p">]</span>
     <span class="n">cfl_coeff</span> <span class="o">=</span> <span class="mf">1.0</span></div>
+
+
+<div class="viewcode-block" id="ESDIRKTrapezoidAbstract"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.ESDIRKTrapezoidAbstract">[docs]</a><span class="k">class</span> <span class="nc">ESDIRKTrapezoidAbstract</span><span class="p">(</span><span class="n">AbstractRKScheme</span><span class="p">):</span>
+    <span class="n">a</span> <span class="o">=</span> <span class="p">[[</span><span class="mf">0.0</span><span class="p">,</span> <span class="mf">0.0</span><span class="p">],</span>
+         <span class="p">[</span><span class="mf">0.5</span><span class="p">,</span> <span class="mf">0.5</span><span class="p">]]</span>
+    <span class="n">b</span> <span class="o">=</span> <span class="p">[</span><span class="mf">0.5</span><span class="p">,</span> <span class="mf">0.5</span><span class="p">]</span>
+    <span class="n">c</span> <span class="o">=</span> <span class="p">[</span><span class="mf">0.0</span><span class="p">,</span> <span class="mf">1.0</span><span class="p">]</span>
+    <span class="n">cfl_coeff</span> <span class="o">=</span> <span class="n">CFL_UNCONDITIONALLY_STABLE</span></div>
 
 
 <div class="viewcode-block" id="RungeKuttaTimeIntegrator"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.RungeKuttaTimeIntegrator">[docs]</a><span class="k">class</span> <span class="nc">RungeKuttaTimeIntegrator</span><span class="p">(</span><span class="n">TimeIntegrator</span><span class="p">):</span>
@@ -1113,6 +1121,10 @@
 
 
 <div class="viewcode-block" id="ESDIRKMidpoint"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.ESDIRKMidpoint">[docs]</a><span class="k">class</span> <span class="nc">ESDIRKMidpoint</span><span class="p">(</span><span class="n">DIRKGeneric</span><span class="p">,</span> <span class="n">ESDIRKMidpointAbstract</span><span class="p">):</span>
+    <span class="k">pass</span></div>
+
+
+<div class="viewcode-block" id="ESDIRKTrapezoid"><a class="viewcode-back" href="../../thetis.html#thetis.coupled_timeintegrator.ESDIRKTrapezoid">[docs]</a><span class="k">class</span> <span class="nc">ESDIRKTrapezoid</span><span class="p">(</span><span class="n">DIRKGeneric</span><span class="p">,</span> <span class="n">ESDIRKTrapezoidAbstract</span><span class="p">):</span>
     <span class="k">pass</span></div>
 
 
