--- a/_modules/thetis/tracer_eq.html
+++ b/_modules/thetis/tracer_eq.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>thetis.tracer_eq &#8212; Thetis 0+untagged.833.g086f878 documentation</title>
+    <title>thetis.tracer_eq &#8212; Thetis 0+untagged.863.gb20c529 documentation</title>
     
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0+untagged.833.g086f878',
+        VERSION:     '0+untagged.863.gb20c529',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -121,9 +121,9 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">bathymetry</span> <span class="o">=</span> <span class="n">bathymetry</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">h_elem_size</span> <span class="o">=</span> <span class="n">h_elem_size</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">v_elem_size</span> <span class="o">=</span> <span class="n">v_elem_size</span>
-        <span class="n">continuity</span> <span class="o">=</span> <span class="n">element_continuity</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">function_space</span><span class="o">.</span><span class="n">fiat_element</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">horizontal_dg</span> <span class="o">=</span> <span class="n">continuity</span><span class="o">.</span><span class="n">horizontal_dg</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">vertical_dg</span> <span class="o">=</span> <span class="n">continuity</span><span class="o">.</span><span class="n">vertical_dg</span>
+        <span class="n">continuity</span> <span class="o">=</span> <span class="n">element_continuity</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">function_space</span><span class="o">.</span><span class="n">ufl_element</span><span class="p">())</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">horizontal_dg</span> <span class="o">=</span> <span class="n">continuity</span><span class="o">.</span><span class="n">horizontal</span> <span class="o">==</span> <span class="s1">&#39;dg&#39;</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">vertical_dg</span> <span class="o">=</span> <span class="n">continuity</span><span class="o">.</span><span class="n">vertical</span> <span class="o">==</span> <span class="s1">&#39;dg&#39;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">use_symmetric_surf_bnd</span> <span class="o">=</span> <span class="n">use_symmetric_surf_bnd</span>
 
         <span class="c1"># define measures with a reasonable quadrature degree</span>
