--- a/demos/demo_3d_channel.py.html
+++ b/demos/demo_3d_channel.py.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>3D tidal channel demo &#8212; Thetis 0+untagged.833.g086f878 documentation</title>
+    <title>3D tidal channel demo &#8212; Thetis 0+untagged.863.gb20c529 documentation</title>
     
     <link rel="stylesheet" href="../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0+untagged.833.g086f878',
+        VERSION:     '0+untagged.863.gb20c529',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -111,8 +111,7 @@ direction using a constant number of layers:</p>
 <span class="n">options</span><span class="o">.</span><span class="n">t_export</span> <span class="o">=</span> <span class="mf">900.0</span>
 <span class="n">options</span><span class="o">.</span><span class="n">t_end</span> <span class="o">=</span> <span class="mi">24</span> <span class="o">*</span> <span class="mi">3600</span>
 <span class="n">options</span><span class="o">.</span><span class="n">fields_to_export</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;uv_2d&#39;</span><span class="p">,</span> <span class="s1">&#39;elev_2d&#39;</span><span class="p">,</span> <span class="s1">&#39;elev_3d&#39;</span><span class="p">,</span> <span class="s1">&#39;uv_3d&#39;</span><span class="p">,</span>
-                            <span class="s1">&#39;w_3d&#39;</span><span class="p">,</span> <span class="s1">&#39;w_mesh_3d&#39;</span><span class="p">,</span> <span class="s1">&#39;salt_3d&#39;</span><span class="p">,</span>
-                            <span class="s1">&#39;baroc_head_3d&#39;</span><span class="p">,</span> <span class="s1">&#39;baroc_head_2d&#39;</span><span class="p">,</span>
+                            <span class="s1">&#39;w_3d&#39;</span><span class="p">,</span> <span class="s1">&#39;w_mesh_3d&#39;</span><span class="p">,</span> <span class="s1">&#39;salt_3d&#39;</span><span class="p">,</span> <span class="s1">&#39;baroc_head_3d&#39;</span><span class="p">,</span>
                             <span class="s1">&#39;uv_dav_2d&#39;</span><span class="p">,</span> <span class="s1">&#39;uv_bottom_2d&#39;</span><span class="p">]</span>
 </pre></div>
 </div>
