--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &#8212; Thetis 0+untagged.833.g086f878 documentation</title>
+    <title>Index &#8212; Thetis 0+untagged.863.gb20c529 documentation</title>
     
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -15,7 +15,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0+untagged.833.g086f878',
+        VERSION:     '0+untagged.863.gb20c529',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -127,11 +127,15 @@
 </li>
         <li><a href="thetis.html#thetis.rungekutta.ESDIRKMidpointAbstract.a">(thetis.rungekutta.ESDIRKMidpointAbstract attribute)</a>
 </li>
+        <li><a href="thetis.html#thetis.rungekutta.ESDIRKTrapezoidAbstract.a">(thetis.rungekutta.ESDIRKTrapezoidAbstract attribute)</a>
+</li>
         <li><a href="thetis.html#thetis.rungekutta.ForwardEulerAbstract.a">(thetis.rungekutta.ForwardEulerAbstract attribute)</a>
 </li>
         <li><a href="thetis.html#thetis.rungekutta.ImplicitMidpointAbstract.a">(thetis.rungekutta.ImplicitMidpointAbstract attribute)</a>
 </li>
         <li><a href="thetis.html#thetis.rungekutta.SSPRK33Abstract.a">(thetis.rungekutta.SSPRK33Abstract attribute)</a>
+</li>
+        <li><a href="thetis.html#thetis.utility.JackettEquationOfState.a">(thetis.utility.JackettEquationOfState attribute)</a>
 </li>
       </ul></li>
       <li><a href="thetis.html#thetis.rungekutta.AbstractRKScheme">AbstractRKScheme (class in thetis.rungekutta)</a>
@@ -150,14 +154,14 @@
       </ul></li>
       <li><a href="thetis.html#thetis.shallowwater_eq.BaseShallowWaterEquation.add_continuity_terms">add_continuity_terms() (thetis.shallowwater_eq.BaseShallowWaterEquation method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.shallowwater_eq.BaseShallowWaterEquation.add_momentum_terms">add_momentum_terms() (thetis.shallowwater_eq.BaseShallowWaterEquation method)</a>
 
       <ul>
         <li><a href="thetis.html#thetis.shallowwater_eq.ModeSplit2DEquations.add_momentum_terms">(thetis.shallowwater_eq.ModeSplit2DEquations method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.equation.Equation.add_term">add_term() (thetis.equation.Equation method)</a>
 </li>
       <li><a href="thetis.html#thetis.coupled_timeintegrator.CoupledERKALE.advance">advance() (thetis.coupled_timeintegrator.CoupledERKALE method)</a>
@@ -190,8 +194,6 @@
         <li><a href="thetis.html#thetis.timeintegrator.SteadyState.advance">(thetis.timeintegrator.SteadyState method)</a>
 </li>
         <li><a href="thetis.html#thetis.timeintegrator.TimeIntegratorBase.advance">(thetis.timeintegrator.TimeIntegratorBase method)</a>
-</li>
-        <li><a href="thetis.html#thetis.timeintegrator.TwoStageTrapezoid.advance">(thetis.timeintegrator.TwoStageTrapezoid method)</a>
 </li>
       </ul></li>
       <li><a href="thetis.html#thetis.utility.ALEMeshUpdater">ALEMeshUpdater (class in thetis.utility)</a>
@@ -249,11 +251,15 @@
 </li>
         <li><a href="thetis.html#thetis.rungekutta.ESDIRKMidpointAbstract.b">(thetis.rungekutta.ESDIRKMidpointAbstract attribute)</a>
 </li>
+        <li><a href="thetis.html#thetis.rungekutta.ESDIRKTrapezoidAbstract.b">(thetis.rungekutta.ESDIRKTrapezoidAbstract attribute)</a>
+</li>
         <li><a href="thetis.html#thetis.rungekutta.ForwardEulerAbstract.b">(thetis.rungekutta.ForwardEulerAbstract attribute)</a>
 </li>
         <li><a href="thetis.html#thetis.rungekutta.ImplicitMidpointAbstract.b">(thetis.rungekutta.ImplicitMidpointAbstract attribute)</a>
 </li>
         <li><a href="thetis.html#thetis.rungekutta.SSPRK33Abstract.b">(thetis.rungekutta.SSPRK33Abstract attribute)</a>
+</li>
+        <li><a href="thetis.html#thetis.utility.JackettEquationOfState.b">(thetis.utility.JackettEquationOfState attribute)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -317,6 +323,8 @@
 </li>
         <li><a href="thetis.html#thetis.rungekutta.ESDIRKMidpointAbstract.c">(thetis.rungekutta.ESDIRKMidpointAbstract attribute)</a>
 </li>
+        <li><a href="thetis.html#thetis.rungekutta.ESDIRKTrapezoidAbstract.c">(thetis.rungekutta.ESDIRKTrapezoidAbstract attribute)</a>
+</li>
         <li><a href="thetis.html#thetis.rungekutta.ForwardEulerAbstract.c">(thetis.rungekutta.ForwardEulerAbstract attribute)</a>
 </li>
         <li><a href="thetis.html#thetis.rungekutta.ImplicitMidpointAbstract.c">(thetis.rungekutta.ImplicitMidpointAbstract attribute)</a>
@@ -373,6 +381,8 @@
 </li>
         <li><a href="thetis.html#thetis.rungekutta.ESDIRKMidpointAbstract.cfl_coeff">(thetis.rungekutta.ESDIRKMidpointAbstract attribute)</a>
 </li>
+        <li><a href="thetis.html#thetis.rungekutta.ESDIRKTrapezoidAbstract.cfl_coeff">(thetis.rungekutta.ESDIRKTrapezoidAbstract attribute)</a>
+</li>
         <li><a href="thetis.html#thetis.rungekutta.ForwardEulerAbstract.cfl_coeff">(thetis.rungekutta.ForwardEulerAbstract attribute)</a>
 </li>
         <li><a href="thetis.html#thetis.rungekutta.ImplicitMidpointAbstract.cfl_coeff">(thetis.rungekutta.ImplicitMidpointAbstract attribute)</a>
@@ -390,8 +400,6 @@
         <li><a href="thetis.html#thetis.timeintegrator.SSPRK22ALE.cfl_coeff">(thetis.timeintegrator.SSPRK22ALE attribute)</a>
 </li>
         <li><a href="thetis.html#thetis.timeintegrator.SteadyState.cfl_coeff">(thetis.timeintegrator.SteadyState attribute)</a>
-</li>
-        <li><a href="thetis.html#thetis.timeintegrator.TwoStageTrapezoid.cfl_coeff">(thetis.timeintegrator.TwoStageTrapezoid attribute)</a>
 </li>
       </ul></li>
       <li><a href="thetis.html#thetis.options.ModelOptions.check_salt_conservation">check_salt_conservation (thetis.options.ModelOptions attribute)</a>
@@ -475,6 +483,8 @@
       <li><a href="thetis.html#thetis.utility.EquationOfState.compute_rho">compute_rho() (thetis.utility.EquationOfState method)</a>
 
       <ul>
+        <li><a href="thetis.html#thetis.utility.JackettEquationOfState.compute_rho">(thetis.utility.JackettEquationOfState method)</a>
+</li>
         <li><a href="thetis.html#thetis.utility.LinearEquationOfState.compute_rho">(thetis.utility.LinearEquationOfState method)</a>
 </li>
       </ul></li>
@@ -540,9 +550,11 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="thetis.html#thetis.utility.Mesh3DConsistencyCalculator.DELTA_MIN_THRESHOLD">DELTA_MIN_THRESHOLD (thetis.utility.Mesh3DConsistencyCalculator attribute)</a>
+</li>
       <li><a href="thetis.html#thetis.utility.DensitySolver">DensitySolver (class in thetis.utility)</a>
 </li>
-      <li><a href="thetis.html#thetis.utility.ElementContinuity.dg">dg (thetis.utility.ElementContinuity attribute)</a>
+      <li><a href="thetis.html#thetis.utility.DensitySolverWeak">DensitySolverWeak (class in thetis.utility)</a>
 </li>
       <li><a href="thetis.html#thetis.callback.DiagnosticCallback">DiagnosticCallback (class in thetis.callback)</a>
 </li>
@@ -620,6 +632,8 @@
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions.elev_source_2d">elev_source_2d (thetis.options.ModelOptions attribute)</a>
 </li>
+      <li><a href="thetis.html#thetis.utility.DensitySolverWeak.ensure_positive_salinity">ensure_positive_salinity() (thetis.utility.DensitySolverWeak method)</a>
+</li>
       <li><a href="thetis.html#thetis.turbulence.GLSModelOptions.eps_min">eps_min (thetis.turbulence.GLSModelOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.equation.Equation">Equation (class in thetis.equation)</a>
@@ -670,12 +684,12 @@
 </li>
       <li><a href="thetis.html#thetis.rungekutta.ERKMidpointAbstract">ERKMidpointAbstract (class in thetis.rungekutta)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.rungekutta.ERKMidpointALE">ERKMidpointALE (class in thetis.rungekutta)</a>
 </li>
       <li><a href="thetis.html#thetis.rungekutta.ERKSemiImplicitGeneric">ERKSemiImplicitGeneric (class in thetis.rungekutta)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.rungekutta.ERKTrapezoidAbstract">ERKTrapezoidAbstract (class in thetis.rungekutta)</a>
 </li>
       <li><a href="thetis.html#thetis.rungekutta.ERKTrapezoidRK">ERKTrapezoidRK (class in thetis.rungekutta)</a>
@@ -684,6 +698,18 @@
 </li>
       <li><a href="thetis.html#thetis.rungekutta.ESDIRKMidpointAbstract">ESDIRKMidpointAbstract (class in thetis.rungekutta)</a>
 </li>
+      <li><a href="thetis.html#thetis.rungekutta.ESDIRKTrapezoid">ESDIRKTrapezoid (class in thetis.rungekutta)</a>
+</li>
+      <li><a href="thetis.html#thetis.rungekutta.ESDIRKTrapezoidAbstract">ESDIRKTrapezoidAbstract (class in thetis.rungekutta)</a>
+</li>
+      <li><a href="thetis.html#thetis.utility.EquationOfState.eval">eval() (thetis.utility.EquationOfState method)</a>
+
+      <ul>
+        <li><a href="thetis.html#thetis.utility.JackettEquationOfState.eval">(thetis.utility.JackettEquationOfState method)</a>
+</li>
+        <li><a href="thetis.html#thetis.utility.LinearEquationOfState.eval">(thetis.utility.LinearEquationOfState method)</a>
+</li>
+      </ul></li>
       <li><a href="thetis.html#thetis.stability_functions.StabilityFunction.eval_funcs">eval_funcs() (thetis.stability_functions.StabilityFunction method)</a>
 </li>
       <li><a href="thetis.html#thetis.timeintegrator.LeapFrogAM3.eval_rhs">eval_rhs() (thetis.timeintegrator.LeapFrogAM3 method)</a>
@@ -854,7 +880,7 @@
 </li>
       <li><a href="thetis.html#thetis.exporter.HDF5Exporter">HDF5Exporter (class in thetis.exporter)</a>
 </li>
-      <li><a href="thetis.html#thetis.utility.ElementContinuity.horizontal_dg">horizontal_dg (thetis.utility.ElementContinuity attribute)</a>
+      <li><a href="thetis.html#thetis.utility.ElementContinuity.horizontal">horizontal (thetis.utility.ElementContinuity attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.momentum_eq.HorizontalAdvectionTerm">HorizontalAdvectionTerm (class in thetis.momentum_eq)</a>
 
@@ -931,8 +957,6 @@
 </li>
         <li><a href="thetis.html#thetis.timeintegrator.TimeIntegratorBase.initialize">(thetis.timeintegrator.TimeIntegratorBase method)</a>
 </li>
-        <li><a href="thetis.html#thetis.timeintegrator.TwoStageTrapezoid.initialize">(thetis.timeintegrator.TwoStageTrapezoid method)</a>
-</li>
         <li><a href="thetis.html#thetis.turbulence.GenericLengthScaleModel.initialize">(thetis.turbulence.GenericLengthScaleModel method)</a>
 </li>
         <li><a href="thetis.html#thetis.utility.ALEMeshUpdater.initialize">(thetis.utility.ALEMeshUpdater method)</a>
@@ -982,7 +1006,7 @@
         <li><a href="thetis.html#thetis.coupled_timeintegrator.CoupledTwoStageRK.integrator_vert_3d">(thetis.coupled_timeintegrator.CoupledTwoStageRK attribute)</a>
 </li>
       </ul></li>
-      <li><a href="thetis.html#thetis.shallowwater_eq.InternalPressureGradientTerm">InternalPressureGradientTerm (class in thetis.shallowwater_eq)</a>
+      <li><a href="thetis.html#thetis.momentum_eq.InternalPressureGradientCalculator">InternalPressureGradientCalculator (class in thetis.momentum_eq)</a>
 </li>
       <li><a href="thetis.html#thetis.exporter.is_2d">is_2d() (in module thetis.exporter)</a>
 </li>
@@ -997,6 +1021,10 @@
 
 <h2 id="J">J</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="thetis.html#thetis.utility.JackettEquationOfState">JackettEquationOfState (class in thetis.utility)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.equation.Equation.jacobian">jacobian() (thetis.equation.Equation method)</a>
 
@@ -1075,6 +1103,8 @@
       <li><a href="thetis.html#thetis.solver.FlowSolver.mesh">mesh (thetis.solver.FlowSolver attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.solver.FlowSolver.mesh2d">mesh2d (thetis.solver.FlowSolver attribute)</a>
+</li>
+      <li><a href="thetis.html#thetis.utility.Mesh3DConsistencyCalculator">Mesh3DConsistencyCalculator (class in thetis.utility)</a>
 </li>
       <li><a href="thetis.html#thetis.callback.DiagnosticCallback.message_str">message_str() (thetis.callback.DiagnosticCallback method)</a>
 
@@ -1221,6 +1251,8 @@
 </li>
         <li><a href="thetis.html#thetis.momentum_eq.HorizontalViscosityTerm.residual">(thetis.momentum_eq.HorizontalViscosityTerm method)</a>
 </li>
+        <li><a href="thetis.html#thetis.momentum_eq.InternalPressureGradientCalculator.residual">(thetis.momentum_eq.InternalPressureGradientCalculator method)</a>
+</li>
         <li><a href="thetis.html#thetis.momentum_eq.LinearDragTerm.residual">(thetis.momentum_eq.LinearDragTerm method)</a>
 </li>
         <li><a href="thetis.html#thetis.momentum_eq.PressureGradientTerm.residual">(thetis.momentum_eq.PressureGradientTerm method)</a>
@@ -1246,8 +1278,6 @@
         <li><a href="thetis.html#thetis.shallowwater_eq.HorizontalAdvectionTerm.residual">(thetis.shallowwater_eq.HorizontalAdvectionTerm method)</a>
 </li>
         <li><a href="thetis.html#thetis.shallowwater_eq.HorizontalViscosityTerm.residual">(thetis.shallowwater_eq.HorizontalViscosityTerm method)</a>
-</li>
-        <li><a href="thetis.html#thetis.shallowwater_eq.InternalPressureGradientTerm.residual">(thetis.shallowwater_eq.InternalPressureGradientTerm method)</a>
 </li>
         <li><a href="thetis.html#thetis.shallowwater_eq.LinearDragTerm.residual">(thetis.shallowwater_eq.LinearDragTerm method)</a>
 </li>
@@ -1350,9 +1380,11 @@
 </li>
       <li><a href="thetis.html#thetis.turbulence.SmoothVerticalGradSolver">SmoothVerticalGradSolver (class in thetis.turbulence)</a>
 </li>
-      <li><a href="thetis.html#thetis.turbulence.BuoyFrequencySolver.solve">solve() (thetis.turbulence.BuoyFrequencySolver method)</a>
+      <li><a href="thetis.html#thetis.momentum_eq.InternalPressureGradientCalculator.solve">solve() (thetis.momentum_eq.InternalPressureGradientCalculator method)</a>
 
       <ul>
+        <li><a href="thetis.html#thetis.turbulence.BuoyFrequencySolver.solve">(thetis.turbulence.BuoyFrequencySolver method)</a>
+</li>
         <li><a href="thetis.html#thetis.turbulence.ShearFrequencySolver.solve">(thetis.turbulence.ShearFrequencySolver method)</a>
 </li>
         <li><a href="thetis.html#thetis.turbulence.SmoothVerticalGradSolver.solve">(thetis.turbulence.SmoothVerticalGradSolver method)</a>
@@ -1361,7 +1393,11 @@
 </li>
         <li><a href="thetis.html#thetis.utility.DensitySolver.solve">(thetis.utility.DensitySolver method)</a>
 </li>
+        <li><a href="thetis.html#thetis.utility.DensitySolverWeak.solve">(thetis.utility.DensitySolverWeak method)</a>
+</li>
         <li><a href="thetis.html#thetis.utility.ExpandFunctionTo3d.solve">(thetis.utility.ExpandFunctionTo3d method)</a>
+</li>
+        <li><a href="thetis.html#thetis.utility.Mesh3DConsistencyCalculator.solve">(thetis.utility.Mesh3DConsistencyCalculator method)</a>
 </li>
         <li><a href="thetis.html#thetis.utility.ParabolicViscosity.solve">(thetis.utility.ParabolicViscosity method)</a>
 </li>
@@ -1376,6 +1412,8 @@
         <li><a href="thetis.html#thetis.utility.VerticalVelocitySolver.solve">(thetis.utility.VerticalVelocitySolver method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.options.ModelOptions.solve_salt">solve_salt (thetis.options.ModelOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.implicitexplicit.IMEXGeneric.solve_stage">solve_stage() (thetis.implicitexplicit.IMEXGeneric method)</a>
@@ -1395,11 +1433,7 @@
 </li>
         <li><a href="thetis.html#thetis.timeintegrator.SSPRK22ALE.solve_stage">(thetis.timeintegrator.SSPRK22ALE method)</a>
 </li>
-        <li><a href="thetis.html#thetis.timeintegrator.TwoStageTrapezoid.solve_stage">(thetis.timeintegrator.TwoStageTrapezoid method)</a>
-</li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.options.ModelOptions.solve_temp">solve_temp (thetis.options.ModelOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.rungekutta.DIRKGeneric.solve_tendency">solve_tendency() (thetis.rungekutta.DIRKGeneric method)</a>
@@ -1612,8 +1646,6 @@
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions.turbulence_model">turbulence_model (thetis.options.ModelOptions attribute)</a>
 </li>
-      <li><a href="thetis.html#thetis.timeintegrator.TwoStageTrapezoid">TwoStageTrapezoid (class in thetis.timeintegrator)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -1670,6 +1702,10 @@
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions.use_parabolic_viscosity">use_parabolic_viscosity (thetis.options.ModelOptions attribute)</a>
 </li>
+      <li><a href="thetis.html#thetis.options.ModelOptions.use_quadratic_density">use_quadratic_density (thetis.options.ModelOptions attribute)</a>
+</li>
+      <li><a href="thetis.html#thetis.options.ModelOptions.use_quadratic_pressure">use_quadratic_pressure (thetis.options.ModelOptions attribute)</a>
+</li>
       <li><a href="thetis.html#thetis.options.ModelOptions.use_smooth_eddy_viscosity">use_smooth_eddy_viscosity (thetis.options.ModelOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions.use_turbulence">use_turbulence (thetis.options.ModelOptions attribute)</a>
@@ -1706,7 +1742,7 @@
 </li>
       <li><a href="thetis.html#thetis.limiter.VertexBasedP1DGLimiter">VertexBasedP1DGLimiter (class in thetis.limiter)</a>
 </li>
-      <li><a href="thetis.html#thetis.utility.ElementContinuity.vertical_dg">vertical_dg (thetis.utility.ElementContinuity attribute)</a>
+      <li><a href="thetis.html#thetis.utility.ElementContinuity.vertical">vertical (thetis.utility.ElementContinuity attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.momentum_eq.VerticalAdvectionTerm">VerticalAdvectionTerm (class in thetis.momentum_eq)</a>
 
