--- a/_modules/thetis/limiter.html
+++ b/_modules/thetis/limiter.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>thetis.limiter &#8212; Thetis 0+untagged.833.g086f878 documentation</title>
+    <title>thetis.limiter &#8212; Thetis 0+untagged.863.gb20c529 documentation</title>
     
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0+untagged.833.g086f878',
+        VERSION:     '0+untagged.863.gb20c529',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -154,19 +154,44 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="c1"># Call general-purpose bound computation.</span>
         <span class="nb">super</span><span class="p">(</span><span class="n">VertexBasedP1DGLimiter</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">compute_bounds</span><span class="p">(</span><span class="n">field</span><span class="p">)</span>
-        <span class="c1"># NOTE This does not limit solution at lateral boundaries at all</span>
-        <span class="c1"># NOTE Omit for now</span>
-        <span class="c1"># # Add nodal values from lateral boundaries</span>
-        <span class="c1"># par_loop(&quot;&quot;&quot;</span>
-        <span class="c1">#     for (int i=0; i&lt;qmax.dofs; i++) {</span>
-        <span class="c1">#         qmax[i][0] = fmax(qmax[i][0], field[i][0]);</span>
-        <span class="c1">#         qmin[i][0] = fmin(qmin[i][0], field[i][0]);</span>
-        <span class="c1">#     }&quot;&quot;&quot;,</span>
-        <span class="c1">#          ds,</span>
-        <span class="c1">#          {&#39;qmax&#39;: (self.max_field, RW),</span>
-        <span class="c1">#           &#39;qmin&#39;: (self.min_field, RW),</span>
-        <span class="c1">#           &#39;field&#39;: (field, READ)})</span>
 
+        <span class="c1"># Add the average of lateral boundary facets to min/max fields</span>
+        <span class="c1"># NOTE this just computes the arithmetic mean of nodal values on the facet,</span>
+        <span class="c1"># which in general is not equivalent to the mean of the field over the bnd facet.</span>
+        <span class="c1"># This is OK for P1DG triangles, but not exact for the extruded case (quad facets)</span>
+        <span class="kn">from</span> <span class="nn">finat.finiteelementbase</span> <span class="k">import</span> <span class="n">entity_support_dofs</span>
+
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">is_2d</span><span class="p">:</span>
+            <span class="n">entity_dim</span> <span class="o">=</span> <span class="mi">1</span>  <span class="c1"># get 1D facets</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="n">entity_dim</span> <span class="o">=</span> <span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>  <span class="c1"># get vertical facets</span>
+        <span class="n">boundary_dofs</span> <span class="o">=</span> <span class="n">entity_support_dofs</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">P1DG</span><span class="o">.</span><span class="n">finat_element</span><span class="p">,</span> <span class="n">entity_dim</span><span class="p">)</span>
+        <span class="n">local_facet_nodes</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">array</span><span class="p">([</span><span class="n">boundary_dofs</span><span class="p">[</span><span class="n">e</span><span class="p">]</span> <span class="k">for</span> <span class="n">e</span> <span class="ow">in</span> <span class="nb">sorted</span><span class="p">(</span><span class="n">boundary_dofs</span><span class="o">.</span><span class="n">keys</span><span class="p">())])</span>
+        <span class="n">n_bnd_nodes</span> <span class="o">=</span> <span class="n">local_facet_nodes</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span>
+        <span class="n">local_facet_idx</span> <span class="o">=</span> <span class="n">op2</span><span class="o">.</span><span class="n">Global</span><span class="p">(</span><span class="n">local_facet_nodes</span><span class="o">.</span><span class="n">shape</span><span class="p">,</span> <span class="n">local_facet_nodes</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">int32</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="s1">&#39;local_facet_idx&#39;</span><span class="p">)</span>
+        <span class="n">code</span> <span class="o">=</span> <span class="s2">&quot;&quot;&quot;</span>
+<span class="s2">            void my_kernel(double **qmax, double **qmin, double **field, unsigned int *facet, unsigned int *local_facet_idx)</span>
+<span class="s2">            {</span>
+<span class="s2">                double face_mean = 0.0;</span>
+<span class="s2">                for (int i = 0; i &lt; </span><span class="si">%(nnodes)d</span><span class="s2">; i++) {</span>
+<span class="s2">                    unsigned int idx = local_facet_idx[facet[0]*</span><span class="si">%(nnodes)d</span><span class="s2"> + i];</span>
+<span class="s2">                    face_mean += field[idx][0];</span>
+<span class="s2">                }</span>
+<span class="s2">                face_mean /= </span><span class="si">%(nnodes)d</span><span class="s2">;</span>
+<span class="s2">                for (int i = 0; i &lt; </span><span class="si">%(nnodes)d</span><span class="s2">; i++) {</span>
+<span class="s2">                    unsigned int idx = local_facet_idx[facet[0]*</span><span class="si">%(nnodes)d</span><span class="s2"> + i];</span>
+<span class="s2">                    qmax[idx][0] = fmax(qmax[idx][0], face_mean);</span>
+<span class="s2">                    qmin[idx][0] = fmin(qmin[idx][0], face_mean);</span>
+<span class="s2">                }</span>
+<span class="s2">            }&quot;&quot;&quot;</span>
+        <span class="n">bnd_kernel</span> <span class="o">=</span> <span class="n">op2</span><span class="o">.</span><span class="n">Kernel</span><span class="p">(</span><span class="n">code</span> <span class="o">%</span> <span class="p">{</span><span class="s1">&#39;nnodes&#39;</span><span class="p">:</span> <span class="n">n_bnd_nodes</span><span class="p">},</span> <span class="s1">&#39;my_kernel&#39;</span><span class="p">)</span>
+        <span class="n">op2</span><span class="o">.</span><span class="n">par_loop</span><span class="p">(</span><span class="n">bnd_kernel</span><span class="p">,</span>
+                     <span class="bp">self</span><span class="o">.</span><span class="n">P1DG</span><span class="o">.</span><span class="n">mesh</span><span class="p">()</span><span class="o">.</span><span class="n">exterior_facets</span><span class="o">.</span><span class="n">set</span><span class="p">,</span>
+                     <span class="bp">self</span><span class="o">.</span><span class="n">max_field</span><span class="o">.</span><span class="n">dat</span><span class="p">(</span><span class="n">op2</span><span class="o">.</span><span class="n">RW</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">max_field</span><span class="o">.</span><span class="n">exterior_facet_node_map</span><span class="p">()),</span>
+                     <span class="bp">self</span><span class="o">.</span><span class="n">min_field</span><span class="o">.</span><span class="n">dat</span><span class="p">(</span><span class="n">op2</span><span class="o">.</span><span class="n">RW</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">min_field</span><span class="o">.</span><span class="n">exterior_facet_node_map</span><span class="p">()),</span>
+                     <span class="n">field</span><span class="o">.</span><span class="n">dat</span><span class="p">(</span><span class="n">op2</span><span class="o">.</span><span class="n">RW</span><span class="p">,</span> <span class="n">field</span><span class="o">.</span><span class="n">exterior_facet_node_map</span><span class="p">()),</span>
+                     <span class="bp">self</span><span class="o">.</span><span class="n">P1DG</span><span class="o">.</span><span class="n">mesh</span><span class="p">()</span><span class="o">.</span><span class="n">exterior_facets</span><span class="o">.</span><span class="n">local_facet_dat</span><span class="p">(</span><span class="n">op2</span><span class="o">.</span><span class="n">READ</span><span class="p">),</span>
+                     <span class="n">local_facet_idx</span><span class="p">(</span><span class="n">op2</span><span class="o">.</span><span class="n">READ</span><span class="p">))</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">is_2d</span><span class="p">:</span>
             <span class="c1"># Add nodal values from surface/bottom boundaries</span>
             <span class="c1"># NOTE calling firedrake par_loop with measure=ds_t raises an error</span>
@@ -175,10 +200,10 @@
             <span class="n">bottom_idx</span> <span class="o">=</span> <span class="n">op2</span><span class="o">.</span><span class="n">Global</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">bottom_nodes</span><span class="p">),</span> <span class="n">bottom_nodes</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">int32</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="s1">&#39;node_idx&#39;</span><span class="p">)</span>
             <span class="n">top_idx</span> <span class="o">=</span> <span class="n">op2</span><span class="o">.</span><span class="n">Global</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">top_nodes</span><span class="p">),</span> <span class="n">top_nodes</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">int32</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="s1">&#39;node_idx&#39;</span><span class="p">)</span>
             <span class="n">code</span> <span class="o">=</span> <span class="s2">&quot;&quot;&quot;</span>
-<span class="s2">                void my_kernel(double **qmax, double **qmin, double **centroids, int *idx) {</span>
+<span class="s2">                void my_kernel(double **qmax, double **qmin, double **field, int *idx) {</span>
 <span class="s2">                    double face_mean = 0;</span>
 <span class="s2">                    for (int i=0; i&lt;</span><span class="si">%(nnodes)d</span><span class="s2">; i++) {</span>
-<span class="s2">                        face_mean += centroids[idx[i]][0];</span>
+<span class="s2">                        face_mean += field[idx[i]][0];</span>
 <span class="s2">                    }</span>
 <span class="s2">                    face_mean /= </span><span class="si">%(nnodes)d</span><span class="s2">;</span>
 <span class="s2">                    for (int i=0; i&lt;</span><span class="si">%(nnodes)d</span><span class="s2">; i++) {</span>
